--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "parcel src/client/index.html",
-    "svelte": "svelte compile -f umd -i components -o dist/server/components",
+    "svelte": "svelte compile -f umd -i shared/components -o dist/server/components",
     "build": "npm run build-client && npm run build-server",
     "build-client": "npm run svelte && parcel build src/client/index.html -d dist/client --public-url /dist",
     "build-server": "cross-env BABEL_ENV=node babel src -d dist"
