--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lpg-ui-ssr",
   "version": "0.0.1",
   "scripts": {
-    "start": "parcel src/client/index.html",
-    "svelte": "svelte compile -f umd -i shared/components -o dist/server/components",
-    "build": "npm run build-client && npm run build-server",
+    "dev": "node server.js",
+    "build": "sapper build",
+    "start": "cross-env NODE_ENV=production node server.js",
     "build-client": "npm run svelte && parcel build src/client/index.html -d dist --public-url ./dist",
     "build-server": "cross-env BABEL_ENV=node babel src -d dist"
   },
@@ -14,27 +14,41 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.1",
-    "parcel-bundler": "^1.2.0"
+    "parcel-bundler": "^1.2.0",
+    "uglifyjs-webpack-plugin": "^1.1.6"
   },
   "dependencies": {
+    "compression": "^1.7.1",
     "config": "^1.29.0",
     "connect-flash": "^0.1.1",
+    "css-loader": "^0.28.8",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "govuk-elements-sass": "^3.1.2",
     "govuk_frontend_toolkit": "^7.2.0",
     "log4js": "^1.1.0",
     "lusca": "^1.5.2",
+    "marked": "^0.3.12",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.7.2",
     "object-assign": "^4.1.1",
     "passport": "^0.3.2",
+    "passport-auth0": "^0.6.1",
     "passport-local": "^1.0.0",
     "promise": "^8.0.1",
     "roadtrip": "^0.6.0",
+    "sapper": "^0.3.2",
+    "sass-loader": "^6.0.6",
+    "session-file-store": "^1.2.0",
+    "style-loader": "^0.19.1",
     "svelte": "^1.49.1",
-    "svelte-cli": "^1.4.0"
+    "svelte-cli": "^1.4.0",
+    "svelte-extras": "^1.6.0",
+    "svelte-loader": "^2.3.3",
+    "uglify-js": "^3.3.5",
+    "uglifyjs": "^2.4.11"
   }
 }
