--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "uglifyjs-webpack-plugin": "^1.1.6"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "co": "^4.6.0",
     "compression": "^1.7.1",
     "config": "^1.29.0",
@@ -27,12 +30,14 @@
     "connect-session-sequelize": "^4.1.0",
     "css-loader": "^0.28.8",
     "ejs": "^2.5.7",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "govuk-elements-sass": "^3.1.2",
     "govuk_frontend_toolkit": "^7.2.0",
+    "log4js": "^2.4.1",
     "lusca": "^1.5.2",
     "marked": "^0.3.12",
     "node-fetch": "^1.7.3",
@@ -41,15 +46,18 @@
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.1",
     "passport-local": "^1.0.0",
+    "passport-saml": "^0.32.1",
     "promise": "^8.0.1",
     "roadtrip": "^0.6.0",
     "sapper": "^0.3.2",
     "sass-loader": "^6.0.6",
+    "sequelize": "^4.31.0",
     "session-file-store": "^1.2.0",
     "style-loader": "^0.19.1",
     "svelte": "^1.49.1",
     "svelte-cli": "^1.4.0",
     "svelte-extras": "^1.6.0",
-    "svelte-loader": "^2.3.3"
+    "svelte-loader": "^2.3.3",
+    "webpack": "^3.10.0"
   }
 }
