--- a/package.json
+++ b/package.json
@@ -2,62 +2,26 @@
   "name": "lpg-ui-ssr",
   "version": "0.0.1",
   "scripts": {
-    "dev": "node server.js",
-    "build": "sapper build",
-    "start": "cross-env NODE_ENV=production node server.js",
-    "build-client": "npm run svelte && parcel build src/client/index.html -d dist --public-url ./dist",
-    "build-server": "cross-env BABEL_ENV=node babel src -d dist"
+    "start": "node server.js"
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-require-ignore": "^0.1.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.1.1",
-    "parcel-bundler": "^1.2.0",
-    "uglifyjs-webpack-plugin": "^1.1.6"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "co": "^4.6.0",
     "compression": "^1.7.1",
     "config": "^1.29.0",
-    "connect": "^3.6.5",
     "connect-flash": "^0.1.1",
-    "connect-multiparty": "^2.1.0",
-    "connect-session-sequelize": "^4.1.0",
-    "css-loader": "^0.28.8",
-    "ejs": "^2.5.7",
-    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "govuk-elements-sass": "^3.1.2",
     "govuk_frontend_toolkit": "^7.2.0",
-    "log4js": "^2.4.1",
     "lusca": "^1.5.2",
-    "marked": "^0.3.12",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.7.2",
-    "object-assign": "^4.1.1",
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.1",
     "passport-local": "^1.0.0",
     "passport-saml": "^0.32.1",
-    "promise": "^8.0.1",
-    "roadtrip": "^0.6.0",
-    "sapper": "^0.3.2",
-    "sass-loader": "^6.0.6",
-    "sequelize": "^4.31.0",
     "session-file-store": "^1.2.0",
-    "style-loader": "^0.19.1",
-    "svelte": "^1.49.1",
-    "svelte-cli": "^1.4.0",
-    "svelte-extras": "^1.6.0",
-    "svelte-loader": "^2.3.3",
-    "webpack": "^3.10.0"
+    "svelte": "^1.49.1"
   }
 }
