--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "lpg-ui-ssr",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js"
+    "sass": "node-sass assets/styles/index.scss assets/styles/main.css",
+    "start": "npm run sass && node server.js"
   },
   "devDependencies": {},
   "dependencies": {
