--- a/.travis-ci.yml
+++ b/.travis-ci.yml
@@ -11,7 +11,10 @@ install:
   - cd service/ui && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT .
 
 after_success:
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+    docker push cshr/lpg-ui
+
+deploy:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
-      docker push cshr/lpg-ui
+      echo "TODO: deploy to test"
     fi
