Fixing travis config?

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ after_success:
 
 deploy:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      echo "TODO: deploy to test"
+      echo "TODO deploy to test"
     fi
