Adding line separators to config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,17 @@ services:
   - docker
 
 before_install:
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     docker pull cshr/lpg-ui
 
 install:
   - cd service/ui && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT .
 
 after_success:
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     docker push cshr/lpg-ui
 
 deploy:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      echo "TODO deploy to test"
+      echo "TODO deploy to test";
     fi
