--- a/service/ui/Dockerfile
+++ b/service/ui/Dockerfile
@@ -29,11 +29,11 @@ RUN . $NVM_DIR/nvm.sh \
   && nvm alias default $NODE_VERSION \
   && nvm use default
 
-COPY package.json package.json
+COPY service/ui/package.json package.json
 # Ensure dev dependencies are install to allow building
 RUN NODE_ENV=development npm install --unsafe-perm
 
-COPY . .
+COPY service/ui/. .
 
 RUN npm run build
 RUN npm run sass
