--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: required
 services:
   - docker
 
-before_install:
+install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     docker pull cshr/lpg-ui
 
-install:
+script:
   - cd service/ui && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT .
 
 after_success:
