--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,19 @@ install:
   - cd $TRAVIS_BUILD_DIR && npm install
   - cd $TRAVIS_BUILD_DIR/service/ui && npm install
 
-script:
-  - cd $TRAVIS_BUILD_DIR/service/ui && npm run sass && npm run build
-  - cd $TRAVIS_BUILD_DIR && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT -f service/ui/Dockerfile .
+#script:
+#  - cd $TRAVIS_BUILD_DIR/service/ui && npm run sass && npm run build
+#  - cd $TRAVIS_BUILD_DIR && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT -f service/ui/Dockerfile .
 
-after_success:
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-    docker push cshr/lpg-ui
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      echo "TODO deploy to test";
-    fi
+#after_success:
+#  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+#    docker push cshr/lpg-ui
+#  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+#      echo "TODO deploy to test";
+#    fi
+  - chmod +x deploy.sh
+  - deploy.sh lpg-ansible-mvp-services lpgui
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_6f6bf00c5309_key -iv $encrypted_6f6bf00c5309_iv
+  -in github.enc -out github -d
