--- a/.travis.yml
+++ b/.travis.yml
@@ -12,21 +12,20 @@ cache:
     - "node_modules"
 
 install:
-#  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-#    docker pull cshr/lpg-ui
-#  - cd $TRAVIS_BUILD_DIR && npm install
-#  - cd $TRAVIS_BUILD_DIR/service/ui && npm install
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+    docker pull cshr/lpg-ui
+  - cd $TRAVIS_BUILD_DIR && npm install
+  - cd $TRAVIS_BUILD_DIR/service/ui && npm install
 
-#script:
-#  - cd $TRAVIS_BUILD_DIR/service/ui && npm run sass && npm run build
-#  - cd $TRAVIS_BUILD_DIR && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT -f service/ui/Dockerfile .
-
-#after_success:
-#  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-#    docker push cshr/lpg-ui
-#  - if [ "$TRAVIS_BRANCH" == "master" ];   then
-#      echo "TODO deploy to test";
-#    fi
+script:
+  - cd $TRAVIS_BUILD_DIR/service/ui && npm run sass && npm run build
+  - cd $TRAVIS_BUILD_DIR && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT -f service/ui/Dockerfile .
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+    docker push cshr/lpg-ui
+  - if [ "$TRAVIS_BRANCH" == "master" ];   then
+      echo "TODO deploy to test";
+    fi
+#push $TRAVIS_COMMIT id to force a deploy to test
   - cd $TRAVIS_BUILD_DIR
   - chmod +x deploy.sh
   - ./deploy.sh lpg-ansible-mvp-services lpgui
