--- a/lib/package.json
+++ b/lib/package.json
@@ -11,6 +11,7 @@
 		"@types/passport-saml": "0.15.5"
 	},
 	"dependencies": {
+		"csv": "^2.0.0",
 		"dgraph-js": "1.1.0",
 		"express": "4.16.2",
 		"grpc": "1.8.4",
