--- a/service/ui/package.json
+++ b/service/ui/package.json
@@ -23,7 +23,9 @@
 		"@types/session-file-store": "1.2.0"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.189.0",
 		"compression": "1.7.1",
+		"concat": "^1.0.3",
 		"express": "4.16.2",
 		"express-session": "1.15.6",
 		"express-validator": "4.3.0",
