--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,14 @@ cache:
 
 install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-    docker pull cshr/lpg-ui
-  - cd $TRAVIS_BUILD_DIR && npm install
-  - cd $TRAVIS_BUILD_DIR/service/ui && npm install
+  - ./build.sh pull
+  - ./build.sh install
 
 script:
-  - cd $TRAVIS_BUILD_DIR/service/ui && npm run sass && npm run build
-  - cd $TRAVIS_BUILD_DIR && docker build -t cshr/lpg-ui:$TRAVIS_COMMIT -f service/ui/Dockerfile .
+  - ./build.sh build ${TRAVIS_COMMIT}
 
 after_success:
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-    docker push cshr/lpg-ui
+  - ./build.sh push
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
       echo "TODO deploy to test";
     fi
