factor out management-ui/src/service/ in favour of /lib/service

--- a/service/management-ui/package.json
+++ b/service/management-ui/package.json
@@ -25,7 +25,6 @@
 	"dependencies": {
 		"compression": "1.7.1",
 		"config": "1.29.0",
-		"dgraph-js": "1.0.1",
 		"express": "4.16.2",
 		"express-session": "1.15.6",
 		"express-validator": "4.3.0",
@@ -38,6 +37,7 @@
 		"passport": "0.3.2",
 		"passport-saml": "0.32.1",
 		"session-file-store": "1.2.0",
-		"svelte": "1.49.1"
+		"svelte": "1.49.1",
+		"lib": "file:../../lib"
 	}
 }
