--- a/service/ui/package.json
+++ b/service/ui/package.json
@@ -20,9 +20,11 @@
 		"@types/node-fetch": "1.6.7",
 		"@types/passport": "0.4.2",
 		"@types/passport-saml": "0.15.5",
+		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0"
 	},
 	"dependencies": {
+		"axios": "0.17.1 ",
 		"compression": "1.7.1",
 		"config": "1.29.0",
 		"dgraph-js": "1.0.1",
