--- a/lib/package.json
+++ b/lib/package.json
@@ -5,8 +5,18 @@
 	"scripts": {
 		"build": "../bin/tsc"
 	},
+	"devDependencies": {
+		"@types/config": "0.0.33",
+		"@types/passport": "0.4.2",
+		"@types/passport-saml": "0.15.5"
+	},
 	"dependencies": {
+		"config": "^1.29.2",
 		"dgraph-js": "^1.0.3",
-		"grpc": "^1.8.4"
+		"express": "^4.16.2",
+		"grpc": "^1.8.4",
+		"passport": "^0.4.0",
+		"passport-saml": "^0.32.1",
+		"svelte": "^1.54.0"
 	}
 }
