--- a/lib/package.json
+++ b/lib/package.json
@@ -8,13 +8,15 @@
 	"devDependencies": {
 		"@types/config": "0.0.33",
 		"@types/passport": "0.4.2",
-		"@types/passport-saml": "0.15.5"
+		"@types/passport-saml": "0.15.5",
+		"@types/i18n": "^0.8.3"
 	},
 	"dependencies": {
 		"config": "^1.29.2",
 		"dgraph-js": "^1.0.3",
 		"express": "^4.16.2",
 		"grpc": "^1.8.4",
+		"i18n": "^0.8.3",
 		"passport": "^0.4.0",
 		"passport-saml": "^0.32.1",
 		"svelte": "^1.54.0"
