--- a/service/management-ui/package.json
+++ b/service/management-ui/package.json
@@ -5,7 +5,8 @@
 		"build": "../../bin/tsc",
 		"clean": "rm -rf dist",
 		"lint": "tslint --project tsconfig.json",
-		"postinstall": "test -e node_modules/management-ui || ln -s ../dist node_modules/management-ui",
+		"postinstall":
+			"test -e node_modules/management-ui || ln -s ../dist node_modules/management-ui",
 		"sass": "node-sass assets/styles/index.scss assets/styles/main.css",
 		"server": "node dist/server.js",
 		"start": "npm run sass && node dist/server.js",
@@ -14,7 +15,6 @@
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
-		"@types/config": "0.0.33",
 		"@types/express-session": "1.15.6",
 		"@types/lusca": "1.5.0",
 		"@types/node-fetch": "1.6.7",
@@ -24,12 +24,12 @@
 	},
 	"dependencies": {
 		"compression": "1.7.1",
-		"config": "1.29.0",
 		"express": "4.16.2",
 		"express-session": "1.15.6",
 		"express-validator": "4.3.0",
 		"govuk-elements-sass": "3.1.2",
 		"govuk_frontend_toolkit": "7.2.0",
+		"lib": "file:../../lib",
 		"log4js": "^2.5.2",
 		"lusca": "1.5.2",
 		"node-fetch": "1.7.3",
@@ -37,7 +37,6 @@
 		"passport": "0.3.2",
 		"passport-saml": "0.32.1",
 		"session-file-store": "1.2.0",
-		"svelte": "1.49.1",
-		"lib": "file:../../lib"
+		"svelte": "1.49.1"
 	}
 }
