--- a/service/ui/package.json
+++ b/service/ui/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"aws-sdk": "^2.189.0",
+		"axios": "^0.17.1",
 		"compression": "1.7.1",
 		"concat": "^1.0.3",
 		"express": "4.16.2",
@@ -36,7 +37,6 @@
 		"lusca": "1.5.2",
 		"node-fetch": "1.7.3",
 		"node-sass": "4.7.2",
-		"request": "2.83.0",
 		"session-file-store": "1.2.0"
 	}
 }
