environ: add build files and config for learning-locker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,4 +23,54 @@ services:
       - 5080:5080
       - 6080:6080
     restart: on-failure
-
+  learning-locker-api-server:
+    command: ["node", "/opt/learning-locker/api/dist/server"]
+    depends_on:
+      - mongodb
+      - redis
+      - mailhog
+    image: cshr/lpg-learning-locker:dbcbc3b8c847f9c1bbc88189e29fcf624dce1aa67a04947d59ec9b84c8a9b4bc
+    ports:
+      - 8082:8082
+    working_dir: /opt/learning-locker
+  learning-locker-api-worker:
+    command: ["node", "/opt/learning-locker/worker/dist/server"]
+    depends_on:
+      - learning-locker-api-server
+    image: cshr/lpg-learning-locker:dbcbc3b8c847f9c1bbc88189e29fcf624dce1aa67a04947d59ec9b84c8a9b4bc
+    working_dir: /opt/learning-locker
+  learning-locker-ui:
+    command: ["node", "/opt/learning-locker/ui/dist/server"]
+    image: cshr/lpg-learning-locker:dbcbc3b8c847f9c1bbc88189e29fcf624dce1aa67a04947d59ec9b84c8a9b4bc
+    ports:
+      - 3000:3000
+    depends_on:
+      - learning-locker-api-server
+    working_dir: /opt/learning-locker
+  learning-locker-xapi:
+    command: ["node", "/opt/xapi-service/dist/server"]
+    depends_on:
+      - mongodb
+      - redis
+      - learning-locker-api-worker
+    image: cshr/lpg-learning-locker:dbcbc3b8c847f9c1bbc88189e29fcf624dce1aa67a04947d59ec9b84c8a9b4bc
+    ports:
+      - 8083:8083
+    working_dir: /opt/xapi-service
+  mailhog:
+    image: mailhog/mailhog@sha256:5be1ae7cf894b58fffbe48f84a0541a3595e53124d460d3fb71b3450a8d11189
+    ports:
+      - 8025:8025
+  mongodb:
+    image: mongo@sha256:fbb95eaa5a0c84d0d2098775f166003c568a79f993d91309cee7cda4135bbbfd
+  redis:
+    image: redis@sha256:3446883dfe13ab3db67433aace0e72d8cd669c528e60c617c42d6c697f0fa41f
+  setup-learning-locker:
+    command: ["/opt/learning-locker/./node_modules/.bin/babel-node", "/opt/learning-locker/mkadmin.js"]
+    depends_on:
+      - mailhog
+      - mongodb
+    environment:
+      - NODE_PATH=/opt/learning-locker
+    image: cshr/lpg-learning-locker:dbcbc3b8c847f9c1bbc88189e29fcf624dce1aa67a04947d59ec9b84c8a9b4bc
+    working_dir: /opt/learning-locker
