--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,11 @@ cache:
 
 install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-  - docker pull cshr/lpg-services
+  - docker pull cshr/lpg-services || true
   - npm install
 
 script:
   - npm run build:all
+  - docker build -t cshr/lpg-services:latest .
+    && docker tag cshr/lpg-services:latest cshr/lpg-services:${TRAVIS_COMMIT}
+    && docker push cshr/lpg-services
