--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 *.log
-*.d.ts
-*.js.map
+.DS_Store
+.env
 .idea
+.sessions
 dist/
 node_modules/
 package-lock.json
-.env
-.sessions
-.DS_Store
+yarn.lock
