--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
 	"version": "0.0.1",
 	"main": "index.js",
 	"scripts": {
-		"build:all": "npm run clean && npm run build:lib && npm run build:management && npm run build:ui",
+		"build:all":
+			"npm run clean && npm run build:lib && npm run build:management && npm run build:ui",
 		"build:lib": "cd src/lib && ../../bin/tsc && npm run copy:lib",
-		"build:management": "cd src/service/management-ui && ../../../bin/tsc && cd ../../.. && npm run copy:management && npm run sass:management",
-		"build:ui": "cd src/service/ui && ../../../bin/tsc && cd ../../.. && npm run copy:ui && npm run sass:ui",
+		"build:management":
+			"cd src/service/management-ui && ../../../bin/tsc && cd ../../.. && npm run copy:management && npm run sass:management",
+		"build:ui":
+			"cd src/service/ui && ../../../bin/tsc && cd ../../.. && npm run copy:ui && npm run sass:ui",
 		"clean": "rm -rf dist",
-		"copy:lib": "cd src/lib/service && cp catalog/data.csv ../../../dist/node_modules/lib/service/catalog && cp -r translation/locales ../../../dist/node_modules/lib/service/translation/locales",
-		"copy:ui": "cd src/service/ui && cp src/package.json ../../../dist/service/ui && cp -r component ../../../dist/service/ui/component && cp -r page ../../../dist/service/ui/page && cp -r assets ../../../dist/service/ui/ && rm -rf ../../../dist/service/ui/assets/styles",
-		"copy:management": "cd src/service/management-ui && cp src/package.json ../../../dist/service/management-ui && cp -r component ../../../dist/service/management-ui/component && cp -r page ../../../dist/service/management-ui/page && cp -r assets ../../../dist/service/management-ui/ && rm -rf ../../../dist/service/management-ui/assets/styles",
-		"sass:management": "cd src/service/management-ui/ && node-sass assets/styles/index.scss ../../../dist/service/management-ui/assets/styles/main.css",
-		"sass:ui": "cd src/service/ui && node-sass assets/styles/main.scss ../../../dist/service/ui/assets/styles/main.css",
+		"copy:lib":
+			"cd src/lib/service && cp catalog/data.csv ../../../dist/node_modules/lib/service/catalog && cp -r translation/locales ../../../dist/node_modules/lib/service/translation/locales",
+		"copy:ui":
+			"cd src/service/ui && cp src/package.json ../../../dist/service/ui && cp -r component ../../../dist/service/ui/component && cp -r page ../../../dist/service/ui/page && cp -r assets ../../../dist/service/ui/ && rm -rf ../../../dist/service/ui/assets/styles",
+		"copy:management":
+			"cd src/service/management-ui && cp src/package.json ../../../dist/service/management-ui && cp -r component ../../../dist/service/management-ui/component && cp -r page ../../../dist/service/management-ui/page && cp -r assets ../../../dist/service/management-ui/ && rm -rf ../../../dist/service/management-ui/assets/styles",
+		"sass:management":
+			"cd src/service/management-ui/ && node-sass assets/styles/index.scss ../../../dist/service/management-ui/assets/styles/main.css",
+		"sass:ui":
+			"cd src/service/ui && node-sass assets/styles/main.scss ../../../dist/service/ui/assets/styles/main.css",
 		"start:all": "npm run start:management & npm run start:ui",
-		"start:ui": "cd dist/service/ui && node --icu-data-dir=../../../node_modules/full-icu server.js",
-		"start:management": "cd dist/service/management-ui && node --icu-data-dir=../../../node_modules/full-icu server.js"
+		"start:ui":
+			"cd dist/service/ui && node --icu-data-dir=../../../node_modules/full-icu server.js",
+		"start:management":
+			"cd dist/service/management-ui && node --icu-data-dir=../../../node_modules/full-icu server.js"
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
+		"@types/csv-parse": "1.1.11",
 		"@types/express-session": "1.15.6",
+		"@types/google-protobuf": "3.2.7",
 		"@types/i18n": "0.8.3",
 		"@types/lusca": "1.5.0",
 		"@types/node": "9.4.0",
@@ -28,35 +40,37 @@
 		"@types/passport-saml": "0.15.5",
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
-		"express-fileupload": "^0.4.0",
-		"request-promise": "^4.2.2",
+		"protobufjs": "6.8.4",
 		"tslint": "5.9.1",
-		"typescript": "2.7.1",
-		"unzip": "^0.1.11"
+		"typescript": "2.7.1"
 	},
 	"dependencies": {
-		"aws-sdk": "^2.189.0",
+		"axios": "0.17.1",
+		"aws-sdk": "2.189.0",
 		"compression": "1.7.1",
-		"concat": "^1.0.3",
-		"csv": "^2.0.0",
-		"dgraph-js": "1.1.0",
+		"concat": "1.0.3",
+		"csv": "2.0.0",
+		"dgraph-js": "1.1.1-beta.2",
 		"express": "4.16.2",
-		"express-cache-response": "^1.0.2",
+		"express-cache-response": "1.0.2",
+		"express-fileupload": "0.4.0",
 		"express-session": "1.15.6",
 		"express-validator": "4.3.0",
-		"full-icu": "^1.2.0",
+		"full-icu": "1.2.0",
 		"govuk-elements-sass": "3.1.2",
 		"govuk_frontend_toolkit": "7.2.0",
 		"grpc": "1.8.4",
 		"i18n": "0.8.3",
-		"log4js": "^2.5.2",
+		"log4js": "2.5.2",
 		"lusca": "1.5.2",
 		"node-fetch": "1.7.3",
 		"node-sass": "4.7.2",
 		"passport": "0.4.0",
 		"passport-saml": "0.32.1",
 		"request": "2.83.0",
+		"request-promise": "4.2.2",
 		"session-file-store": "1.2.0",
-		"svelte": "1.54.0"
+		"svelte": "1.55.0",
+		"unzip": "0.1.11"
 	}
 }
