--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,15 @@ jobs:
   include:
     - stage: "install, build and push"
     - install:
-        - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-        - docker pull cshr/lpg-services || true
-        - npm install
+      - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+      - docker pull cshr/lpg-services || true
+      - npm install
     - script:
-        - npm run build:all
-        - docker build -t cshr/lpg-services:latest .
-          && docker tag cshr/lpg-services:latest cshr/lpg-services:${TRAVIS_COMMIT}
-          && docker push cshr/lpg-services
+      - npm run build
+      - docker build -t cshr/lpg-services:latest .
+      - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+        && docker tag cshr/lpg-services:latest cshr/lpg-services:${TRAVIS_COMMIT}
+        && docker push cshr/lpg-services
     - stage: Deploy
       script:
         - ./deploy.sh lpgservices
