--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"dotenv": "5.0.0",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
+		"striptags": "^3.1.1",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
