--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
 			"node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
 		"sass:ui":
 			"node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
+		"sass:all": "npm run sass:management & npm run sass:ui",
 		"start:all": "npm run start:management & npm run start:ui",
 		"start:management":
 			"cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
 		"start:ui":
 			"cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
 		"watch": "./bin/tsc -w",
-		"watchsass:ui":
-			"node-sass -w src/ui/assets/styles -o dist/ui/assets/styles",
-		"watchsass:management":
-			"node-sass -w src/management-ui/assets/styles -o dist/management-ui/assets/styles",
-		"dev:ui": "npm run watch & npm run watchsass:ui & npm run start:ui & wait",
+		"watch-sass": "nodemon -e scss -x \"npm run sass:all\"",
+		"dev:ui": "npm run watch & npm run watch-sass & npm run start:ui & wait",
 		"dev:management":
-			"npm run watch & npm run watchsass:management & npm run start:management & wait"
+			"npm run watch & npm run watch-sass & npm run start:management & wait"
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
