--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
 			"node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
 		"watch-sass:management":
 			"node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles",
-		"dev:ui": "npm run watch & npm run watch-sass & npm run start:ui & wait",
+		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
 		"dev:management":
-			"npm run watch & npm run watch-sass & npm run start:management & wait"
+			"npm run watch & npm run watch-sass:management & npm run start:management & wait"
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
