--- a/environ/learning-locker/Dockerfile
+++ b/environ/learning-locker/Dockerfile
@@ -36,7 +36,7 @@ ENV API_HOST=learning-locker-api-server \
     MONGODB_PATH=mongodb://mongodb:27017/learninglocker \
     NODE_ENV=production \
     QUEUE_NAMESPACE=learninglocker \
-    QUEUE_PROVIDER=redis \
+    QUEUE_PROVIDER=REDIS \
     REDIS_DB=0 \
     REDIS_HOST=redis \
     REDIS_PORT=6379 \
