--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/node-fetch": "1.6.7",
 		"@types/passport": "0.4.2",
 		"@types/passport-saml": "0.15.5",
+		"@types/pg": "7.4.3",
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"dotenv": "5.0.0",
@@ -69,8 +70,10 @@
 		"lusca": "1.5.2",
 		"node-fetch": "1.7.3",
 		"node-sass": "4.7.2",
+		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
 		"passport-saml": "0.32.1",
+		"pg": "7.4.1",
 		"request": "2.83.0",
 		"request-promise": "4.2.2",
 		"session-file-store": "1.2.0",
