--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"request-promise": "4.2.2",
 		"session-file-store": "1.2.0",
 		"svelte": "1.55.0",
-		"unzip": "0.1.11"
+		"unzip": "0.1.11",
+		"uuid": "^3.2.1"
 	}
 }
