--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"dotenv": "5.0.0",
 		"elasticsearch": "^14.1.0",
 		"make-runnable": "^1.3.6",
+		"node-stopwatch": "0.0.1",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
 		"striptags": "^3.1.1",
