--- a/package.json
+++ b/package.json
@@ -5,26 +5,34 @@
 		"build": "npm run compile && npm run sass:management && npm run sass:ui",
 		"clean": "./bin/setup-dist",
 		"compile": "./bin/tsc",
-		"dev:management": "npm run watch & npm run watch-sass:management & npm run start:management & wait",
+		"dev:management":
+			"npm run watch & npm run watch-sass:management & npm run start:management & wait",
 		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
 		"lint": "tslint --project tsconfig.json",
 		"nuke": "rm -rf dist node_modules",
 		"postinstall": "./bin/setup-dist",
 		"sass:all": "npm run sass:management & npm run sass:ui",
-		"sass:management": "node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
-		"sass:ui": "node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
+		"sass:management":
+			"node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
+		"sass:ui":
+			"node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
 		"start:all": "npm run start:management & npm run start:ui",
-		"start:management": "cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
-		"start:ui": "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
+		"start:management":
+			"cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
+		"start:ui":
+			"cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
 		"watch": "./bin/tsc -w",
 		"watch-sass-nodemon": "nodemon -e scss -x \"npm run sass:all\"",
-		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
-		"watch-sass:management": "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
+		"watch-sass:ui":
+			"node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
+		"watch-sass:management":
+			"node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
 		"@types/csv-parse": "1.1.11",
 		"@types/dotenv": "4.0.2",
+		"@types/elasticsearch": "^5.0.19",
 		"@types/express-session": "1.15.6",
 		"@types/google-protobuf": "3.2.7",
 		"@types/i18n": "0.8.3",
@@ -37,7 +45,13 @@
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"node-sass": "4.7.2",
+		"dotenv": "5.0.0",
+		"elasticsearch": "^14.1.0",
+		"make-runnable": "^1.3.6",
+		"node-stopwatch": "0",
 		"nodemon": "1.14.12",
+		"protobufjs": "6.8.4",
+		"striptags": "^3.1.1",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
