--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/compression": "0.0.35",
 		"@types/csv-parse": "1.1.11",
 		"@types/dotenv": "4.0.2",
+		"@types/elasticsearch": "^5.0.19",
 		"@types/express-session": "1.15.6",
 		"@types/google-protobuf": "3.2.7",
 		"@types/i18n": "0.8.3",
@@ -37,8 +38,12 @@
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"dotenv": "5.0.0",
+		"elasticsearch": "^14.1.0",
+		"make-runnable": "^1.3.6",
+		"node-stopwatch": "0.0.1",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
+		"striptags": "^3.1.1",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
